notification service methods implemented